# nxt_ros_catkin

nxt/nxt_controllers/: CMakeLists.txt
nxt/nxt_description/: CMakeLists.txt
nxt/nxt_lxf2urdf/: CMakeLists.txt
nxt/nxt_msgs/: CMakeLists.txt
nxt/nxt_python/: CMakeLists.txt
nxt/nxt_ros/: CMakeLists.txt
nxt/nxt_rviz_plugin/: CMakeLists.txt
nxt_apps/nxt_assisted_teleop/: CMakeLists.txt
nxt_apps/nxt_assisted_teleop/launch/sensor_car/: assisted_teleop.launch  assisted_teleop.yaml
nxt_apps/nxt_assisted_teleop/scripts/: range_to_pointcloud.py
nxt_apps/nxt_teleop/: CMakeLists.txt  joy_single.launch  manifest.xml  teleop_joy.launch  teleop_single.launch
nxt_apps/nxt_teleop/src/: nxt_joy.cpp
nxt_robot_gyro_car/: robot.yaml
nxt_robot_sensor_car/: robot.launch  robot.yaml
nxt_robots/nxt_robot_gyro_car/: CMakeLists.txt
nxt_robots/nxt_robot_kit_test/: CMakeLists.txt
nxt_robots/nxt_robot_sensor_car/: CMakeLists.txt  robot.launch
